-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.2.1
[SCXML Editor]: When adding in another element to an else, the else tags are not written out correctly. What happens is that they come out like:
<if cond="prepared()"> <send event="foo" id="foo"/> <else> <send/> </else> </if>
when it should look like:
<if cond="prepared()"> <send event="foo" id="foo"/> </else> <send/> </if>
In the simplified case. To reproduce do:
- Create a new State Machine file via the wizard
- Drag a State on to it
- Right click the state and add an if, fill out condition to something
- Right click the if and add a Send, fill out the event and id to something
- Right click the if and add an Else
- Right click the Else and add a Send.
Checking the XML now will indicate that it is not correct
- is required for
-
QTCREATORBUG-17637 Make State Chart editor plugin non-experimental (loaded by default)
-
- Closed
-